--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,15 @@
     href="https://fonts.googleapis.com/css2?family=Manjari:wght@100;400;700&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <title>CCAK - Clean Cooking Association of Kenya</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEF8PJYZMF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZEF8PJYZMF');
+  </script>
 </head>
 
 <body>
